--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
 [dependency-groups]
 dev = [
+    "contextily>=1.6.2",
     "gdown>=5.2.0",
+    "geopandas>=1.1.1",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "prophet>=1.2.1",
     "scikit-learn>=1.7.2",
+    "scipy>=1.16.3",
     "seaborn>=0.13.2",
+    "umap-learn>=0.5.9.post2",
 ]
