Jupyter Notebook Done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ dev = [
     "contextily>=1.6.2",
     "gdown>=5.2.0",
     "geopandas>=1.1.1",
+    "hdbscan>=0.8.40",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
